--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -34,11 +34,6 @@
         display:none;
     }
 
-    #footer-wrapper .footer-social {
-        text-align:right !important;
-        margin-right:5%;
-    }
-
     .logo-contain #logo {
         flex:2;
         padding: 5px 0px !important;
